Changed Numbers Activity name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".PhrasesActivity" />
-        <activity android:name=".NumbersActivity" />
+        <activity
+            android:name=".NumbersActivity"
+            android:label="@string/numbers" />
         <activity android:name=".FamilyActivity" />
         <activity android:name=".ColorsActivity"></activity>
     </application>
