Added other Activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PhrasesActivity" />
+        <activity
+            android:name=".PhrasesActivity"
+            android:label="@string/category_phrases" />
         <activity
             android:name=".NumbersActivity"
             android:label="@string/numbers" />
-        <activity android:name=".FamilyActivity" />
-        <activity android:name=".ColorsActivity"></activity>
+        <activity
+            android:name=".FamilyActivity"
+            android:label="@string/category_family" />
+        <activity
+            android:name=".ColorsActivity"
+            android:label="@string/category_colors" />
     </application>
 
 </manifest>
